# rust-fluidsynth

./: Cargo.toml  README.md
crates/fluidsynth/: build.rs
crates/fluidsynth/src/: lib.rs  modulator.rs  settings.rs
crates/fluidsynth/tests/: settings.rs
src/: audio.rs  event.rs  gen.rs  lib.rs  log.rs  midi.rs  modulator.rs  seq.rs  settings.rs  sfont.rs  synth.rs
tests/: lib.rs  settings.rs
