[package]
name = "fluidsynth"
version = "0.0.1"
authors = ["Aaron Dewes <aaron@nirvati.org>", "Anna Scholtz <anna@scholtzan.net>"]
license = "LGPL-2.0"
description = "FluidSynth bindings"
repository = "https://github.com/scholtzan/rust-fluidsynth"
edition = "2015"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.66"
pkg-config = "0.3"
