[package]
name = "fluidsynth-ng"
version = "0.1.0"
authors = ["Aaron Dewes <aaron@nirvati.org>", "Anna Scholtz <anna@scholtzan.net>"]
license = "LGPL-2.0"
description = "FluidSynth bindings"
repository = "https://github.com/AaronDewes/rust-fluidsynth"
edition = "2024"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3"
